--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MojoSmit07/MovieBox#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
