--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MojoSmit07/MovieBox#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -28,6 +29,6 @@
     "nodemailer": "^6.9.9"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   }
 }
